--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -8,7 +8,8 @@
 
 </head>
 <body>
-    
+    <img src="https://storage.cloud.google.com/chavi-bucket/%D7%90%D7%A0%D7%99%D7%9E%D7%A6%D7%99%D7%94004.gif?authuser=0" class="i"/>
+    <img src="https://storage.cloud.google.com/chavi-bucket/%D7%90%D7%A0%D7%99%D7%9E%D7%A6%D7%99%D7%94062.gif?authuser=0"  class="i"/>
     <h1 class="_form-title txt_hello">Hello, welcome to chat app!</h1>
     <h2 class="_form-title txt_homepage">This is the home page</h2>
     <div class="lobby_container _form-area">
