--- a/static/lobby.css
+++ b/static/lobby.css
@@ -4,6 +4,11 @@ body {
     font-family: sans-serif;
 }
 
+.i {
+    width: 500px;
+    height: 300px;
+}
+
 .lobby_container{
     width: 600px;
     height: 400px;
